Fixed alignment with links to images

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,11 @@ body{
     background-color: #41B3A3;
     
 }
-
+.recipe-list {
+    margin-top: 150px;
+    padding: 20px 20px;
+    background-color: #E8A87C;
+}
 .header {
     color: white;
     font-size: 60px;
@@ -23,21 +27,23 @@ ul {
 }
 ul a{
     text-decoration: none;
-    color: #E27D60;
+    color: black;
     text-shadow: 2px 2px 5px black;
 }
-ul.names{
-    
+.names{
+    text-shadow: 2px 2px 5px black;
+    background-color:#E27D60;
+    border-radius: 25px;
     text-align: center;
     font-size: 25px;
-    padding-left: 200px;
+    margin-top: 20px;
+    box-shadow: 5px 5px 20px 5px black;
     font-family: "Lucida Console", "Courier New", "Times New Roman";
   
 }
 li {
-    padding: 20px 100px;
-    float: left;
-    
+    display: inline-block;
+    padding: 20px 100px;   
 }
 
 img {
@@ -45,16 +51,4 @@ img {
     width: 400px;
     box-shadow: 10px 10px 15px 12px black;
 }
-#text1{
-    margin-right: 100px;
-    margin-left: -150px;
-}
-#text2{
-    margin-left: 25px;
-}
-#text3{
-    margin-left: 120px;
-}
-footer {
-    display: block;
-  }
+
